<resources>
    <string name="app_name">Cocktail</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Switch">Switch</string>
    <string name="ordinary_drink">Ordinary Drink</string>
    <string name="apply">apply</string>
    <string name="drinks">3-Mile Long Island Iced Tea</string>
    <string name="filter_item">Filters</string>
    <string name="beer">Beer</string>
    <string name="labelMenuHome">Головна</string>
    <string name="labelMenuHistory">Меню</string>
    <string name="shop">Покупки</string>
    <string name="delivery">Доставка</string>
    <string name="city">Місто</string>
    <string name="delivery_drinks">Вулиця № будинку</string>
    <string name="drinks_shop">Пропозиція не підсумовується з іншими акціями в "DrinksShop" та діє за наявності</string>
    <string name="sort">Sort</string>
    <string name="todo">TODO</string>
    <string name="title_text">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</string>
    <string name="date">з 11.03.21 по 24.03.21</string>
    <string name="oll_cocktails">знижка на будь-які коктейлі ТМ Топпінг</string>
    <string name="discount_prices">-15%</string>
    <string name="shopping">Shopping</string>
    <string name="bonus">Бонус</string>
    <string name="money">143 грн</string>
    <string name="bali">Бали</string>
    <string name="bonus_bali">14600</string>
    <string name="offer">Персональні пропозиції</string>
    <string name="price_week">Ціна тижня</string>
    <string name="cold_drinks">Охолоджені напої</string>
    <string name="shares_owm_import">Акції власного Імпорту</string>
    <string name="confirm">Підтвердити</string>
    <string name="shopping_drinks">Тут відображатимуться Ваші покупки</string>
    <string name="photo">photo</string>
    <string name="on">on</string>
    <string name="off">Off</string>
    <string name="button">ПОВНІ ПРАВИЛА УЧАСТІ В ПРОГРАМІ "ВЛАСНИЙ РАХУНОК"</string>
    <string name="available_bali">Ваші доступні бали</string>
    <string name="_186004">18604</string>
    <string name="help">Як допомогти?</string>
    <string name="view_one">1. Виберіть благодійну кампанію.</string>
    <string name="child_help">ДОПОМОГА ДІТЯМ</string>
    <string name="number_one">1</string>
    <string name="view_two">2. Перерахуйте бали на добро.</string>
    <string name="view_three">3. Ми конвертуємо бали в бонуси.</string>
    <string name="view_four"> 4. Благодійний фонд застосовує бонуси,
        купує товари та передає сімям, що потребують допомоги.</string>
    <string name="view_five">5. Надаємо звіт у соцмережах, а також на сайті "DrinksShop".</string>
    <string name="type_name" translatable="false">Введіть посаду</string>
    <string name="type_password" translatable="false">Введіть пароль</string>
</resources>