<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/photo_drinks"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/drink"
                android:contentDescription="@string/todo"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:gravity="start"
            android:textSize="13sp"
            android:text="@string/title_text"
            android:layout_marginStart="135dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/numbers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:text="@string/number_one"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>